--- a/addons/eor_sale/views/sale_view.xml
+++ b/addons/eor_sale/views/sale_view.xml
@@ -34,7 +34,7 @@
             <xpath expr="//field[@name='order_line']/tree/field[@name='name']" position="attributes">
                 <attribute name="invisible">1</attribute>
             </xpath>
-            <xpath expr="//page[@name='order_lines']/field[@name='note']" position="replace">
+            <xpath expr="//page[@name='order_lines']//field[@name='note']" position="replace">
                 <label for="x_obervaciones" string="Observaciones" class="d-block"/>
                 <field name="x_obervaciones" class="oe_inline"/>
                 <label for="note" class="d-block"/>
