[FIX]Cambios en las facturas de clientes y proveedores. [FIX]Añadiendo totales y renombrando el encabezado de columna de los campos Costo de Transferencia y Descuentos Extra. [FIX]Arreglos de los cálculos de totales en la función _compute_amount. [FIX]Añadiendo un campo llamado amount_taxed al modelo account.inovice que calcula el monto de base imponible mas impuestos y agregando a la vista de lista de las facturas.

--- a/addons/eor_purchase/views/account_invoice.xml
+++ b/addons/eor_purchase/views/account_invoice.xml
@@ -47,7 +47,7 @@
         <field name="inherit_id" ref="account.invoice_supplier_tree"/>
         <field name="arch" type="xml">
             <xpath expr="//field[@name='amount_tax_signed']" position="after">
-                <field name="total_extra_discount"/>
+                <field name="total_extra_discount" string="Descuentos Extra" sum="Total Descuento Extra"/>
             </xpath>
         </field>
     </record>
