--- a/addons/cancel_purchase_order_ept/view/purchase_order.xml
+++ b/addons/cancel_purchase_order_ept/view/purchase_order.xml
@@ -7,10 +7,10 @@
 		<field name="inherit_id" ref="purchase.purchase_order_form" />
 		<field name="arch" type="xml">
             <xpath expr="//button[@name='button_draft']" position="after">
-                <button name="button_draft" states="done" string="Set to Draft" type="object" groups="purchase.group_purchase_manager"/>
+                <button name="button_draft" title="Set to Draft" aria-label="Set to Draft" states="done" string="Set to Draft" type="object" groups="purchase.group_purchase_manager"/>
              </xpath>
              <xpath expr="//button[@name='button_cancel']" position="after">
-                 <button name="button_cancel" states="done" string="Cancel" type="object" groups="purchase.group_purchase_manager"/>
+                 <button name="button_cancel" title="Cancel" aria-label="Cancel" states="done" string="Cancel" type="object" groups="purchase.group_purchase_manager"/>
              </xpath>
         </field>
     </record>
