--- a/addons/product_cost_update/views/purchase_order.xml
+++ b/addons/product_cost_update/views/purchase_order.xml
@@ -8,8 +8,8 @@
             <field name="inherit_id" ref="purchase.purchase_order_form"/>
             <field name="arch" type="xml">
                 <xpath expr="//button[@name='button_done']" position="after">
-                    <button name="fix_standard_price" type="object" string="Fix product cost" groups="base.group_no_one" states="purchase"/>
-                    <button name="fix_seller_price" type="object" string="Fix seller price" groups="base.group_no_one" states="purchase"/>
+                    <button name="fix_standard_price" type="object" title="Fix product cost" aria-label="Fix product cost" string="Fix product cost" groups="base.group_no_one" states="purchase"/>
+                    <button name="fix_seller_price" type="object" title="Fix seller price" aria-label="Fix seller price" string="Fix seller price" groups="base.group_no_one" states="purchase"/>
                 </xpath>
             </field>
         </record>
